--- a/Bulk-query-processing.ipynb
+++ b/Bulk-query-processing.ipynb
@@ -483,7 +483,7 @@
    "id": "9a3a2b6e",
    "metadata": {},
    "source": [
-    "# Numerical queries - Centrality"
+    "# Vertex-set queries - Centrality"
    ]
   },
   {
